# receipt-OCR

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
src/: config.py  main.py  models.py
src/ai/: base.py  factory.py  gemini.py
src/drive/: client.py
src/logging/: logger.py
src/ocr/: base.py  factory.py  fallback.py  vision.py
src/processing/: manager.py
src/rules/: amount_validation.py  corrections.py
src/sheets/: client.py
tests/: test_ai_parse.py  test_amount_validation.py  test_amount_validation_retry.py  test_config.py  test_drive.py  test_extraction_retry.py  test_manager_rename_and_validation.py  test_manager_skip.py  test_models.py  test_ocr_fallback.py  test_review_label.py  test_rules.py  test_runtime_modes.py  test_sheets.py
